# data-extraction-module

./: README.md  pyproject.toml  requirements.txt  test.py
app/: main.py
app/api/: main.py
app/api/routes/: document.py  extract.py
app/core/: config.py  database.py
app/models/: __init__.py  company.py  correction.py  document.py  extracted_field.py  financial.py  fund.py  investment.py
app/services/: __init__.py  document_service.py  extract_service.py  ollama_service.py
app/utils/: cleaner.py  json_parser.py  pdf_extractor.py  prompt_builder.py
